# puter

./: README.md  app.py  pyproject.toml
examples/: chat_with_token.py
src/puter_ai/: __init__.py  client.py
static/: app.js  main.css
templates/: index.html
tests/: test_client.py  test_example_script.py
